--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "moment": "^2.22.1",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
     "react": "^16.3.2",
+    "react-dates": "^16.7.0",
     "react-dom": "^16.3.2",
     "react-modal": "^3.4.4",
     "react-redux": "^5.0.7",
