--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --watch"
+    "test": "jest --config=jest.config.json --watchAll"
   },
   "author": "",
   "license": "ISC",
