--- a/jest.config.json
+++ b/jest.config.json
@@ -1,5 +1,12 @@
 {
   "transform": {
     "^.+\\.js$": "babel-jest"
-  }
+  },
+  "setupFiles": [
+    "raf/polyfill",
+    "<rootDir>/client/tests/setupTest.js"
+  ],
+  "snapshotSerializers": [
+    "enzyme-to-json/serializer"
+  ]
 }
