--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^22.4.4",
+    "raf": "^3.4.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.4"
